--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Mono&display=swap');
 
-body {
-  font-family: sans-serif;
-  color: #222;
+* {
   margin: 0;
+  padding: 0;
 }
 
 h1,
