--- a/front/src/App.css
+++ b/front/src/App.css
@@ -32,10 +32,8 @@ p {
 }
 
 .container {
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 24px;
+  height: 100vh;
+  position: relative;
 }
 
 header {
